link css i javascript

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
        <h1>Benvingut al meu projecte!</h1>
        <p>Aquesta és la versió inicial del meu lloc web.</p>
        <p>Afegint més contingut a la web.</p>
+       <footer><p>&copy; 2025 El Meu Projecte</p></footer>
    </body>
    </html>
