commit afegint nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
    </head>
    <body>
        <h1>Benvingut al meu projecte!</h1>
+        <nav>        
+            <ul>
+                <li><a href="#">Inici</a></li>
+                <li><a href="#">Serveis</a></li>
+                <li><a href="#">Contacte</a></li>
+            </ul>
+        </nav>
+
        <p>Aquesta és la versió inicial del meu lloc web.</p>
        <p>Afegint més contingut a la web.</p>
        <footer><p>&copy; 2025 El Meu Projecte</p></footer>
