commit index primera p modificada

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
         </nav>
 
-       <p>Aquesta és la versió inicial del meu lloc web.</p>
+       <p>Aquesta és la versió *amb nova navegació* del meu lloc web.<p>
        <p>Afegint més contingut a la web.</p>
        <footer><p>&copy; 2025 El Meu Projecte</p></footer>
    </body>
