commit amb stash

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
    <body>
        <h1>Benvingut al meu projecte!</h1>
        <p>Aquesta és la *versió principal amb nova navegació* del meu lloc web.</p>
+       <nav>        
+        <ul>
+            <li><a href="#">Inici</a></li>
+            <li><a href="#">Serveis</a></li>
+            <li><a href="#">Contacte</a></li>
+        </ul>
+    </nav>
+       <h2>Les nostres funcions destacades</h2>
        <p>Afegint més contingut a la web.</p>
        <footer><p>&copy; 2025 El Meu Projecte</p></footer>
    </body>
