--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </nav>
        <h2>Les nostres funcions destacades</h2>
        <p>Afegint més contingut a la web.</p>
+       <p>Petit canvi 2.</p>
        <footer><p>&copy; 2025 El Meu Projecte</p></footer>
    </body>
    </html>
