--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        <h2>Les nostres funcions destacades</h2>
        <p>Afegint més contingut a la web.</p>
        <p>Petit canvi 2.</p>
+       <h2>Noves Funcionalitats de la V2</h2>
        <footer><p>&copy; 2025 El Meu Projecte</p></footer>
    </body>
    </html>
